--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,7 @@
 spring: 
   datasource:
     url: jdbc:mysql://localhost:3306/shop_logos?serverTimezone=UTC
+#    TODO:
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -12,3 +13,14 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.MySQL8Dialect
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+server:
+  port: 8081
+#logging:
+#  level:
+#    root: trace
+custom:
+  paths:
+    file-directory: uploads
