--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<model-mapper-version>3.0.0</model-mapper-version>
+		<springfox-boot-starter-version>3.0.0</springfox-boot-starter-version>
+		<spring-boot-starter-security-version>2.6.3</spring-boot-starter-security-version>
 	</properties>
 
 	<dependencies>
@@ -60,12 +63,17 @@
 		<dependency>
 			<groupId>org.modelmapper</groupId>
 			<artifactId>modelmapper</artifactId>
-			<version>3.0.0</version>
+			<version>${model-mapper-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-boot-starter</artifactId>
-			<version>3.0.0</version>
+			<version>${springfox-boot-starter-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>${spring-boot-starter-security-version}</version>
 		</dependency>
 	</dependencies>
 
