--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,10 +16,15 @@ spring:
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
+  servlet:
+    multipart:
+      max-file-size: 20MB
 server:
   port: 8081
   error:
     include-message: always
+  servlet:
+    context-path: /api
 #logging:
 #  level:
 #    root: trace
