--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,6 @@
 spring: 
   datasource:
-    url: jdbc:mysql://localhost:3306/shop_logos?serverTimezone=UTC
+    url: jdbc:mysql://${DB_HOST:localhost}:3306/${DB_NAME:shop_logos}?serverTimezone=UTC
     username: ${DB_USERNAME:root}
     password: ${DB_PASSWORD:root}
     driver-class-name: com.mysql.cj.jdbc.Driver
